--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon --env-file=.env app.js"
+    "start": "nodemon -L --env-file=.env app.js"
   },
   "keywords": [],
   "author": "",
